--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@fastify/csrf-protection": "^6.1.0",
     "@fastify/helmet": "^10.1.0",
     "@fastify/static": "^6.6.0",
+    "@grpc/grpc-js": "^1.8.2",
+    "@grpc/proto-loader": "^0.7.4",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.2.1",
     "@nestjs/serve-static": "^3.0.0",
